--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="card">
         <div class="wrap">
-          <img src="./images/projec1.png" style="width: 200px" alt="" />
+          <img src="./images/project1.png" style="width: 200px" alt="" />
           <h2>Lorem ipsum dolor</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt,
