--- a/ghibli/index.html
+++ b/ghibli/index.html
@@ -18,7 +18,7 @@
       <div class="card">
         <h2>Hello Semua!</h2>
         <iframe
-          src="https://www.youtube.com/embed/gZSQ8aLErIA"
+          src="https://www.youtube.com/embed/Y8bagG4BzLA?si=Djpvn8bfJIFOyNKO"
           title="[Ghibli Piano] 🌾 Beautiful piano ghibli melodies 🔱 Relaxing Piano Music (relax, study, sleep)"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -37,7 +37,7 @@
       <div class="card">
         <h2>Hello Semua!</h2>
         <iframe
-          src="https://www.youtube.com/embed/gZSQ8aLErIA"
+          src="https://www.youtube.com/embed/Y8bagG4BzLA?si=Djpvn8bfJIFOyNKO"
           title="[Ghibli Piano] 🌾 Beautiful piano ghibli melodies 🔱 Relaxing Piano Music (relax, study, sleep)"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
